# able

./: .gitignore  .tmp_iface.able  .tmp_iter_filter_map.able  AGENTS.md  Able.g4  CLAUDE.md  CNAME  DESIGN-MISC.md  LICENSE  LOG.md  PLAN.md  README.md  SUPERVISOR.md  Test.g4  able  able.ohm  able10  able10ts  able_language.md  ast.rb  build.sh  justfile  language-spec-2025.md  language_spec.md  run_all_tests.sh  run_stdlib_tests.sh
.claude/: settings.local.json
compiler/: README.md  able.arborist  able2.arborist  parglare_trace.dot  shard.yml
design/: ast-contract.md  ast-schema-v10.md  brainstorming_built_in_constructs.txt  brainstorming_interfaces.txt  brainstorming_serialization.txt  brainstorming_truthy.txt  channels-mutexes.md  concurrency-executor-contract.md  concurrency-fixture-plan.md  go-concurrency-scheduler.md  go-runtime-outline.md  interfaces_distilled.txt  interfaces_extreme2.txt  package-management.md  parity-examples-plan.md  parser-ast-coverage.md  parser-roadmap.md  pattern-break-alignment.md  stdlib-v10-vision.md  stdlib-v10.md  string-plan.md  testing-cli-design.md  typechecker-plan.md  typechecker.md
docs/: onboarding.md  testing-matchers.md
examples/: adventofcode1.able  adventofcode2019_day1.able  assign.able  greet.able  greet_typecheck_fail.able  hashids.able  helloworld.able  leetcode10_regular_expression_matching.able  leetcode11_container_with_most_water.able  leetcode12_integer_to_roman.able  leetcode1_two_sum.able  leetcode2_add_two_numbers.able  leetcode3_longest_substring.able  leetcode4_median_of_two_sorted_arrays.able  leetcode5_longest_palindromic_substring.able  leetcode6_zigzag_conversion.able  leetcode7_reverse_integer.able  leetcode8_string_to_integer.able  leetcode9_palindrome_number.able  poker.able
foo/: example1.txt  grammar.pg  grammar.pgt  parse.py  small.pg  small.pgt
interpreter/: ast.ts  interpreter.ts  package.json  sample1.ts  sample2.ts  test2.ts
interpreter10/: AGENTS.md  (+4 more)
interpreter10-go/: PARITY.md  README.md  go.mod  go.sum
old/tree-sitter-able/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  interpreter.ts  ptest.ts  tree-sitter.json
old/tree-sitter-able/bindings/c/: tree-sitter-able.pc.in
old/tree-sitter-able/bindings/go/: binding_test.go
old/tree-sitter-able/bindings/node/: binding.cc
old/tree-sitter-able/bindings/python/tests/: test_binding.py
old/tree-sitter-able/bindings/rust/: build.rs
old/tree-sitter-able/test/corpus/: chars.txt  comments.txt  floats.txt  nil.txt
tree-sitter-able/: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  index.js  install.sh  interpreter.ts  package-lock.json  package.json  parse.sh  parser.js  parser.ts  pyproject.toml  setup.py  test.able  test.sh  test.ts
tree-sitter-able/bindings/c/: tree-sitter-able.pc.in
tree-sitter-able/bindings/go/: binding.go
tree-sitter-able/bindings/node/: index.js
tree-sitter-able/bindings/python/tree_sitter_able/: __init__.py  binding.c
tree-sitter-able/bindings/rust/: lib.rs
tree-sitter-able/src/: grammar.js  grammar.json  node-types.json  parser.c
tree-sitter-able/test/corpus/: bools.txt  chars.txt  comments.txt  floats.txt  integers.txt  literals.txt  nil.txt  statements.txt  strings.txt
v12/parser/tree-sitter-able/: CMakeLists.txt  Cargo.toml  Makefile  NOTES.md  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
v12/parser/tree-sitter-able/bindings/python/tree_sitter_able/: __init__.py
v12/parser/tree-sitter-able/src/: grammar.json  node-types.json  scanner.c
v12/parser/tree-sitter-able/test/corpus/: async.txt  basic.txt  character_literals.txt  complex_patterns.txt  control_flow.txt  declarations.txt  expressions_literals.txt  iterator_literals.txt  non_local_jump.txt  numeric_literals.txt  statements.txt  string_interpolation.txt  struct_literals.txt
(+5861 files in other folders)
