[package]
name = "tree-sitter-able"
description = "Able language parser (v12 spec)"
version = "0.1.0"
authors = ["David Ellis <david@conquerthelawn.com>"]
license = "epl-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "able"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/davidkellis/able"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
