[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-able"
description = "Able language parser (v11 spec)"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "able"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "David Ellis", email = "david@conquerthelawn.com" }]
requires-python = ">=3.10"
license.text = "epl-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/davidkellis/able"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
